main.tf
#### Data Sources ####
data "aws_caller_identity" "current" {}

data "aws_canonical_user_id" "current" {}

data "aws_vpc" "cloud9_vpc" {
  id = var.cloud9_vpc_id
}

data "aws_route_table" "cloud9_rtb" {
  vpc_id = var.cloud9_vpc_id
}



data "aws_iam_policy_document" "s3_bucket_policy" {
  statement {
    effect  = "Deny"
    actions = ["s3:*"]
    resources = [
      "${aws_s3_bucket.vault_s3_bucket.arn}",
      "${aws_s3_bucket.vault_s3_bucket.arn}/*"
    ]

    principals {
      type        = "*"
      identifiers = ["*"]
    }

    condition {
      test     = "Bool"
      variable = "aws:SecureTransport"

      values = ["false"]
    }
  }
}

data "aws_iam_policy_document" "s3_bucket_logs_policy" {
  statement {
    effect  = "Allow"
    actions = ["s3:PutObject"]
    resources = [
      "${aws_s3_bucket.access_logs_bucket.arn}/*"
    ]
    principals {
      type        = "Service"
      identifiers = ["logging.s3.amazonaws.com"]
    }
    condition {
      test     = "ArnLike"
      variable = "aws:SourceArn"
      values   = ["${aws_s3_bucket.vault_s3_bucket.arn}"]
    }
    condition {
      test     = "StringEquals"
      variable = "aws:SourceAccount"
      values   = ["${data.aws_caller_identity.current.account_id}"]
    }
  }
  statement {
    effect  = "Deny"
    actions = ["s3:*"]
    resources = [
      "${aws_s3_bucket.access_logs_bucket.arn}",
      "${aws_s3_bucket.access_logs_bucket.arn}/*"
    ]
    principals {
      type        = "*"
      identifiers = ["*"]
    }
    condition {
      test     = "Bool"
      variable = "aws:SecureTransport"
      values   = ["false"]
    }
  }
}

#### VPC Configuration ####
module "vpc" {
  source  = "terraform-aws-modules/vpc/aws"
  version = "3.19.0"

  name = "${var.tag_prefix}/VPC"
  cidr = var.vpc_data.cidr

  azs             = var.vpc_data.availability_zones
  private_subnets = var.vpc_data.private_subnet_cidrs

  enable_dns_hostnames = true
  enable_dns_support   = true

  igw_tags = {
    "Name" = "${var.tag_prefix}/igw"
  }

  private_subnet_names = ["${var.tag_prefix}/PrivateSubnet01", "${var.tag_prefix}/PrivateSubnet02"]
  public_subnet_names  = ["${var.tag_prefix}/PublicSubnet01", "${var.tag_prefix}/PublicSubnet02"]

  public_subnet_tags = {
    "kubernetes.io/role/elb" = 1
  }

  private_subnet_tags = {
    "kubernetes.io/role/internal-elb" = 1
  }
}

module "vpc_endpoints" {
  source = "terraform-aws-modules/vpc/aws//modules/vpc-endpoints"

  vpc_id = module.vpc.vpc_id

  endpoints = {
    s3 = {
      service         = "s3"
      service_type    = "Gateway"
      tags            = { Name = "${var.tag_prefix}-s3-vpce" }
      route_table_ids = flatten(module.vpc.private_route_table_ids)
    },
    dynamodb = {
      service         = "dynamodb"
      service_type    = "Gateway"
      route_table_ids = flatten(module.vpc.private_route_table_ids)
      tags            = { Name = "${var.tag_prefix}-ddb-vpce" }
    },
    ec2 = {
      service             = "ec2"
      private_dns_enabled = true
      subnet_ids          = module.vpc.private_subnets
      security_group_ids  = [aws_security_group.vpc_tls.id]
      tags                = { Name = "${var.tag_prefix}-ec2-vpce" }
    },
    eks = {
      service             = "eks"
      private_dns_enabled = true
      subnet_ids          = module.vpc.private_subnets
      security_group_ids  = [aws_security_group.vpc_eks_node_to_cluster.id]
      tags                = { Name = "${var.tag_prefix}-eks-vpce" }
    },

    sts = {
      service             = "sts"
      private_dns_enabled = true
      subnet_ids          = module.vpc.private_subnets
      security_group_ids  = [aws_security_group.vpc_tls.id]
      tags                = { Name = "${var.tag_prefix}-sts-vpce" }


    },
    logs = {
      service             = "logs"
      private_dns_enabled = true
      subnet_ids          = module.vpc.private_subnets
      security_group_ids  = [aws_security_group.vpc_tls.id]
      tags                = { Name = "${var.tag_prefix}-logs-vpce" }
    },

    ecr_api = {
      service             = "ecr.api"
      private_dns_enabled = true
      subnet_ids          = module.vpc.private_subnets
      security_group_ids  = [aws_security_group.vpc_tls.id]
      tags                = { Name = "${var.tag_prefix}-ecr-api-vpce" }

    },
    ecr_dkr = {
      service             = "ecr.dkr"
      private_dns_enabled = true
      subnet_ids          = module.vpc.private_subnets
      security_group_ids  = [aws_security_group.vpc_tls.id]
      tags                = { Name = "${var.tag_prefix}-ecr-dkr-vpce" }
    },
    kms = {
      service             = "kms"
      private_dns_enabled = true
      subnet_ids          = module.vpc.private_subnets
      security_group_ids  = [aws_security_group.vpc_tls.id]
      tags                = { Name = "${var.tag_prefix}-kms-vpce" }
    },
  }
}

module "vpc_cni_irsa" {
  source  = "terraform-aws-modules/iam/aws//modules/iam-role-for-service-accounts-eks"
  version = "~> 5.0"

  role_name_prefix      = "${var.tag_prefix}-cni-irsa"
  attach_vpc_cni_policy = true
  vpc_cni_enable_ipv4   = true

  oidc_providers = {
    main = {
      provider_arn               = module.eks.oidc_provider_arn
      namespace_service_accounts = ["kube-system:aws-node"]
    }
  }
}



resource "aws_route" "vpc_to_peer" {
  count = "${length(module.vpc.private_route_table_ids)}"
  route_table_id = "${element(module.vpc.private_route_table_ids, count.index)}"
  destination_cidr_block = data.aws_vpc.cloud9_vpc.cidr_block
  vpc_peering_connection_id = aws_vpc_peering_connection.vpc_peering.id
}

resource "aws_route" "peer_to_vpc" {
  route_table_id = data.aws_route_table.cloud9_rtb.id
  destination_cidr_block = module.vpc.vpc_cidr_block
  vpc_peering_connection_id = aws_vpc_peering_connection.vpc_peering.id
}

resource "aws_vpc_peering_connection" "vpc_peering" {
  peer_vpc_id   = var.cloud9_vpc_id
  vpc_id        = module.vpc.vpc_id

  auto_accept = true
  accepter {
    allow_remote_vpc_dns_resolution = true
  }

  requester {
    allow_remote_vpc_dns_resolution = true
  }
}


#### EKS Configuration ####
module "eks" {
  source  = "terraform-aws-modules/eks/aws"
  version = "19.6.0"

  cluster_name                   = var.tag_prefix
  cluster_version                = var.eks_data.version
  cluster_endpoint_public_access = false

  vpc_id     = module.vpc.vpc_id
  subnet_ids = module.vpc.private_subnets

  eks_managed_node_group_defaults = {
    ami_type                   = var.eks_data.ami_type_default
    instance_types             = var.eks_data.instance_types
    iam_role_attach_cni_policy = true
    vpc_cni_enable_ipv4        = true
  }

  #manage_aws_auth_configmap = true
  create_kms_key = false
  cluster_encryption_config = {
    resources        = ["secrets"]
    provider_key_arn = module.kms_key.key_arn
  }

  cluster_addons = {
    coredns = {
      most_recent = true
    }
    kube-proxy = {
      most_recent = true
    }
    vpc-cni = {
      most_recent              = true
      service_account_role_arn = module.vpc_cni_irsa.iam_role_arn
    }
  }
  
  cluster_security_group_additional_rules = {
    ingress_source_cloud9_cidr = {
      description              = "Ingress from Cloud9"
      protocol                 = "tcp"
      from_port                = 443
      to_port                  = 443
      type                     = "ingress"
      cidr_blocks                = [data.aws_vpc.cloud9_vpc.cidr_block]
    }
  }
  
  eks_managed_node_groups = {
    default_node_group = {
      use_custom_launch_template = false

      min_size     = var.eks_data.min_size
      max_size     = var.eks_data.max_size
      desired_size = var.eks_data.desired_size

      update_config = {
        max_unavailable = 1
      }

      #### Remote Access (Troubleshooting Nodes) ####
      #### TODO: REMOVE ME ####
      remote_access = {
        ec2_ssh_key               = module.key_pair.key_pair_name
        source_security_group_ids = [aws_security_group.remote_access.id]
      }
      
      description       = "EKS managed node group"
      ebs_optimized     = true
      enable_monitoring = true
      block_device_mappings = {
        xvda = {
          device_name = "/dev/xvda"
          ebs = {
            volume_size           = var.eks_data.volume_details.size
            volume_type           = var.eks_data.volume_type
            iops                  = var.eks_data.volume_details.iops
            throughput            = var.eks_data.volume_details.throughput
            encrypted             = true
            kms_key_id            = module.kms_key.key_id
            delete_on_termination = true
          }
        }
      }
    }
  }

  create_iam_role          = true
  iam_role_name            = "${var.tag_prefix}-nodes"
  iam_role_use_name_prefix = false
  iam_role_description     = "EKS managed node group role"
  iam_role_additional_policies = {
    AmazonEC2ContainerRegistryReadOnly = "arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
    AmazonSSMManagedInstanceCore = "arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore"
  }
}

#### Security Configuration ####
module "kms_key" {
  source  = "terraform-aws-modules/kms/aws"
  version = "~> 1.1"

  description = "CMK to encrypt EKS Managed Node Group Volumes"

  key_administrators = [
    data.aws_caller_identity.current.arn
  ]

  key_service_users = [
    module.eks.cluster_iam_role_arn
  ]

  aliases = ["eks/${var.tag_prefix}"]

  tags = {
    Name = "${var.tag_prefix}/kms"
  }
}

# Security Group for VPCE
resource "aws_security_group" "vpc_tls" {
  name_prefix = "${var.tag_prefix}-vpce"
  description = "Allow TLS inbound traffic"
  vpc_id      = module.vpc.vpc_id

  ingress {
    description = "TLS from VPC"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = [module.vpc.vpc_cidr_block]
  }
}

resource "aws_security_group" "vpc_eks_node_to_cluster" {
  name_prefix = "${var.tag_prefix}-eks-vpce"
  description = "Allow all traffic"
  vpc_id      = module.vpc.vpc_id

  ingress {
    description = "Allow all traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = [module.vpc.vpc_cidr_block]
  }
}

#### Dynamo DB Configuration ####
resource "aws_dynamodb_table" "product_table" {
  attribute {
    name = "ProductID"
    type = "S"
  }

  attribute {
    name = "ShardID"
    type = "S"
  }

  billing_mode = "PROVISIONED"
  hash_key     = "ShardID"
  name         = "ProductsTable"

  point_in_time_recovery {
    enabled = "false"
  }

  range_key      = "ProductID"
  read_capacity  = "5"
  stream_enabled = "false"
  table_class    = "STANDARD"
  write_capacity = "5"
}

resource "aws_dynamodb_table_item" "insert_items" {
  for_each   = var.ddb_items
  table_name = aws_dynamodb_table.product_table.name
  hash_key   = aws_dynamodb_table.product_table.hash_key
  range_key  = aws_dynamodb_table.product_table.range_key
  item = jsonencode({
    ShardID = { S = each.value.shard_id }
    ProductID = { S = each.value.product_id }
    ProductName = { S = each.value.product_name }
  })
}

#### S3 Configuration ####
resource "aws_s3_bucket" "vault_s3_bucket" {
  bucket = "vault-agent-template-${random_string.random_string.id}"
}

resource "aws_s3_bucket_public_access_block" "vault_s3_bucket" {
  bucket = aws_s3_bucket.vault_s3_bucket.id

  block_public_acls       = true
  block_public_policy     = true
  ignore_public_acls      = true
  restrict_public_buckets = true
}

resource "aws_s3_bucket_server_side_encryption_configuration" "vault_s3_bucket" {
  bucket = aws_s3_bucket.vault_s3_bucket.bucket

  rule {
    apply_server_side_encryption_by_default {
      sse_algorithm = "AES256"
    }
  }
}

resource "aws_s3_bucket_logging" "vault_s3_bucket" {
  bucket = aws_s3_bucket.vault_s3_bucket.id

  target_bucket = aws_s3_bucket.access_logs_bucket.id
  target_prefix = "/"
}

resource "aws_s3_bucket_policy" "vault_s3_bucket" {
  bucket = aws_s3_bucket.vault_s3_bucket.id
  policy = data.aws_iam_policy_document.s3_bucket_policy.json
}

resource "aws_s3_bucket" "access_logs_bucket" {
  bucket = "${aws_s3_bucket.vault_s3_bucket.id}-access-logs"
}

resource "aws_s3_bucket_public_access_block" "access_logs_bucket" {
  bucket = aws_s3_bucket.access_logs_bucket.id

  block_public_acls       = true
  block_public_policy     = true
  ignore_public_acls      = true
  restrict_public_buckets = true
}

resource "aws_s3_bucket_server_side_encryption_configuration" "access_logs_bucket" {
  bucket = aws_s3_bucket.access_logs_bucket.bucket

  rule {
    apply_server_side_encryption_by_default {
      sse_algorithm = "AES256"
    }
  }
}

resource "aws_s3_bucket_policy" "access_logs_bucket" {
  bucket = aws_s3_bucket.access_logs_bucket.id
  policy = data.aws_iam_policy_document.s3_bucket_logs_policy.json
}

resource "aws_s3_bucket_acl" "access_logs_bucket" {
  bucket = aws_s3_bucket.access_logs_bucket.id
  access_control_policy {
    grant {
      grantee {
        type = "Group"
        uri  = "http://acs.amazonaws.com/groups/s3/LogDelivery"
      }
      permission = "READ_ACP"
    }
    grant {
      grantee {
        type = "Group"
        uri  = "http://acs.amazonaws.com/groups/s3/LogDelivery"
      }
      permission = "WRITE"
    }

    owner {
      id = data.aws_canonical_user_id.current.id
    }
  }
}


#### ECR Configuration
resource "aws_ecr_repository" "aws_cli" {
  name = "${var.tag_prefix}-repo-${random_string.random_string.id}-aws-cli"

  image_scanning_configuration {
    scan_on_push = true
  }

  encryption_configuration {
    encryption_type = "KMS"
  }
}

resource "aws_ecr_repository" "vault" {
  name = "${var.tag_prefix}-repo-${random_string.random_string.id}-vault"

  image_scanning_configuration {
    scan_on_push = true
  }

  encryption_configuration {
    encryption_type = "KMS"
  }
}

resource "aws_ecr_repository" "vault_k8s" {
  name = "${var.tag_prefix}-repo-${random_string.random_string.id}-vault-k8s"

  image_scanning_configuration {
    scan_on_push = true
  }

  encryption_configuration {
    encryption_type = "KMS"
  }
}

module "push_vault_image_ecr" {
  source = "./container"
  image_name = var.vault_image
  region = var.region
  ecr_repository_url = aws_ecr_repository.vault.repository_url
  ecr_registry_id = aws_ecr_repository.vault.registry_id
}

module "push_vault_k8s_image_ecr" {
  source = "./container"
  image_name = var.vault_k8s_image
  region = var.region
  ecr_repository_url = aws_ecr_repository.vault_k8s.repository_url
  ecr_registry_id = aws_ecr_repository.vault_k8s.registry_id
}

module "push_aws_cli_image_ecr" {
  source = "./container"
  image_name = var.aws_cli_image
  region = var.region
  ecr_repository_url = aws_ecr_repository.aws_cli.repository_url
  ecr_registry_id = aws_ecr_repository.aws_cli.registry_id
}

#### Random string generator ####
resource "random_string" "random_string" {
  length           = 8
  special          = true
  upper            = false
  override_special = "-"
}

#### Remote Access (Troubleshooting Nodes) ####
#### TODO: REMOVE ME ####
module "key_pair" {
  source  = "terraform-aws-modules/key-pair/aws"
  version = "~> 2.0"

  key_name_prefix    = var.tag_prefix
  create_private_key = true

}

resource "aws_security_group" "remote_access" {
  name_prefix = "${var.tag_prefix}-remote-access"
  description = "Allow remote SSH access"
  vpc_id      = module.vpc.vpc_id

  ingress {
    description = "SSH access"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [data.aws_vpc.cloud9_vpc.cidr_block]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
}
